fix routes auth
